--- a/la-note-enchantée.html
+++ b/la-note-enchantée.html
@@ -28,13 +28,13 @@
   </header>
   <main>
     <section class="image-container">
-      <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+      <img src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
     </section>
     <section class="menu">
       <form  class="wrapper">
         <div class="title-container">
           <!-- Hero Title -->                     
-          <h2 class="title">La palette du goût</h2>
+          <h2 class="title">La note enchantée</h2>
           <!-- Heart -->
           <div class="heart">
             <input type="checkbox" name="restaurant-heart" id="restaurant-heart">
@@ -55,8 +55,8 @@
             </input>
             <label for="first" class="menu-item">
               <div class="text-container">
-                <p class="title">Fricassée d'escargots</p>
-                <p class="item-description">Au piment d'Espelette </p>
+                <p class="title">Ravioles de foie gras </p>
+                <p class="item-description">Accompagnées de leur crème à la truffe</p>
               </div>
               <p class="price">25€</p>
               <div class="check">
@@ -69,8 +69,8 @@
             </input>
             <label for="second" class="menu-item">
               <div class="text-container">
-                <p class="title">Foie gras de canard mi-cuit</p>
-                <p class="item-description">Et ses copeaux de truffe noire</p>
+                <p class="title">Caviar osciètre </p>
+                <p class="item-description">Sur blini à la farine de blé noir</p>
               </div>
               <p class="price">35€</p>
               <div class="check">
@@ -83,10 +83,24 @@
             </input>
             <label for="third" class="menu-item">
               <div class="text-container">
-                <p class="title">Œuf au plat</p>
-                <p class="item-description">Assaisonné à la truffe sur lit de caviar</p>
+                <p class="title">Homard et espuma de potiron</p>
+                <p class="item-description">Marinés aux zestes d'orange</p>
               </div>
               <p class="price">20€</p>
+              <div class="check">
+                <i class="fa-solid fa-circle-check"></i>
+              </div>
+            </label>
+          </div>
+          <div class="menu-card">
+            <input type="checkbox" id="fourth" name="fourth">
+            </input>
+            <label for="fourth" class="menu-item">
+              <div class="text-container">
+                <p class="title">Foie gras de canard cuit entier</p>
+                <p class="item-description">Confiture de figue et pain toasté</p>
+              </div>
+              <p class="price">35€</p>
               <div class="check">
                 <i class="fa-solid fa-circle-check"></i>
               </div>
@@ -98,28 +112,14 @@
             </div>
           </div>
           <div class="menu-card">
-            <input type="checkbox" id="fourth" name="fourth">
-            </input>
-            <label for="fourth" class="menu-item">
-              <div class="text-container">
-                <p class="title">Filet de bœuf aux herbes</p>
-                <p class="item-description">Accompagné de sa ribambelle de légumes</p>
-              </div>
-              <p class="price">40€</p>
-              <div class="check">
-                <i class="fa-solid fa-circle-check"></i>
-              </div>
-            </label>
-          </div>
-          <div class="menu-card">
             <input type="checkbox" id="fifth" name="fifth">
             </input>
             <label for="fifth" class="menu-item">
               <div class="text-container">
-                <p class="title">Parmentier de queue de bœuf</p>
-                <p class="item-description">À la truffe noire sur sa purée de panais</p>
+                <p class="title">Noix de coquilles Saint-Jacques</p>
+                <p class="item-description">Sur lit de purée de céleri-rave</p>
               </div>
-              <p class="price">35€</p>
+              <p class="price">40€</p>
               <div class="check">
                 <i class="fa-solid fa-circle-check"></i>
               </div>
@@ -130,10 +130,24 @@
             </input>
             <label for="sixth" class="menu-item">
               <div class="text-container">
-                <p class="title">Filet de turbot</p>
-                <p class="item-description">Aux agrumes</p>
+                <p class="title">Langoustine poêlée</p>
+                <p class="item-description">Purée de patate douce</p>
               </div>
-              <p class="price">44€</p>
+              <p class="price">35€</p>
+              <div class="check">
+                <i class="fa-solid fa-circle-check"></i>
+              </div>
+            </label>
+          </div>
+          <div class="menu-card">
+            <input type="checkbox" id="seventh" name="seventh">
+            </input>
+            <label for="seventh" class="menu-item">
+              <div class="text-container">
+                <p class="title">Mijoté de queue de bœuf </p>
+                <p class="item-description">Et riz sauvage aux zestes de citron</p>
+              </div>
+              <p class="price">45€</p>
               <div class="check">
                 <i class="fa-solid fa-circle-check"></i>
               </div>
@@ -145,28 +159,14 @@
             </div>
           </div>
           <div class="menu-card">
-            <input type="checkbox" id="seventh" name="seventh">
+            <input type="checkbox" id="eighth" name="eighth">
             </input>
-            <label for="seventh" class="menu-item">
+            <label for="eighth" class="menu-item">
               <div class="text-container">
-                <p class="title">Paris-Brest</p>
-                <p class="item-description">Revisité </p>
+                <p class="title">Macaron noisette et chocolat</p>
+                <p class="item-description">Glace au caramel brun et sel de Guérande</p>
               </div>
               <p class="price">18€</p>
-              <div class="check">
-                <i class="fa-solid fa-circle-check"></i>
-              </div>
-            </label>
-          </div>
-          <div class="menu-card">
-            <input type="checkbox" id="eigth" name="eigth">
-            </input>
-            <label for="eigth" class="menu-item">
-              <div class="text-container">
-                <p class="title">Macaron au chocolat d'exception </p>
-                <p class="item-description">Et glace à la vanille de Madagascar</p>
-              </div>
-              <p class="price">22€</p>
               <div class="check">
                 <i class="fa-solid fa-circle-check"></i>
               </div>
@@ -177,8 +177,22 @@
             </input>
             <label for="ninth" class="menu-item">
               <div class="text-container">
-                <p class="title">Mousse au chocolat </p>
-                <p class="item-description">Au piment d'Espelette et à la truffe noire</p>
+                <p class="title">Baba au rhum revisité</p>
+                <p class="item-description">Avec son coulis de citron</p>
+              </div>
+              <p class="price">22€</p>
+              <div class="check">
+                <i class="fa-solid fa-circle-check"></i>
+              </div>
+            </label>
+          </div>
+          <div class="menu-card">
+            <input type="checkbox" id="tenth" name="tenth">
+            </input>
+            <label for="tenth" class="menu-item">
+              <div class="text-container">
+                <p class="title">Tarte au citron meringuée </p>
+                <p class="item-description">Déstructurée</p>
               </div>
               <p class="price">23€</p>
               <div class="check">
