--- a/le-délice-des-sens.html
+++ b/le-délice-des-sens.html
@@ -28,13 +28,13 @@
   </header>
   <main>
     <section class="image-container">
-      <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+      <img src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
     </section>
     <section class="menu">
       <form  class="wrapper">
         <div class="title-container">
           <!-- Hero Title -->                     
-          <h2 class="title">La palette du goût</h2>
+          <h2 class="title">Lé délice des sens</h2>
           <!-- Heart -->
           <div class="heart">
             <input type="checkbox" name="restaurant-heart" id="restaurant-heart">
@@ -55,8 +55,8 @@
             </input>
             <label for="first" class="menu-item">
               <div class="text-container">
-                <p class="title">Fricassée d'escargots</p>
-                <p class="item-description">Au piment d'Espelette </p>
+                <p class="title">Tartare de thon</p>
+                <p class="item-description">Assaisonné au yuzu </p>
               </div>
               <p class="price">25€</p>
               <div class="check">
@@ -69,8 +69,8 @@
             </input>
             <label for="second" class="menu-item">
               <div class="text-container">
-                <p class="title">Foie gras de canard mi-cuit</p>
-                <p class="item-description">Et ses copeaux de truffe noire</p>
+                <p class="title">Bouchée de homard croustillant </p>
+                <p class="item-description">Et sa farandole de petits légumes</p>
               </div>
               <p class="price">35€</p>
               <div class="check">
@@ -83,10 +83,10 @@
             </input>
             <label for="third" class="menu-item">
               <div class="text-container">
-                <p class="title">Œuf au plat</p>
-                <p class="item-description">Assaisonné à la truffe sur lit de caviar</p>
+                <p class="title">Poulet rôti aux herbes de Provence </p>
+                <p class="item-description">Et sa crème de truffe</p>
               </div>
-              <p class="price">20€</p>
+              <p class="price">40€</p>
               <div class="check">
                 <i class="fa-solid fa-circle-check"></i>
               </div>
@@ -102,8 +102,8 @@
             </input>
             <label for="fourth" class="menu-item">
               <div class="text-container">
-                <p class="title">Filet de bœuf aux herbes</p>
-                <p class="item-description">Accompagné de sa ribambelle de légumes</p>
+                <p class="title">Poulet rôti aux herbes de Provence </p>
+                <p class="item-description">Et sa crème de truffe</p>
               </div>
               <p class="price">40€</p>
               <div class="check">
@@ -116,8 +116,8 @@
             </input>
             <label for="fifth" class="menu-item">
               <div class="text-container">
-                <p class="title">Parmentier de queue de bœuf</p>
-                <p class="item-description">À la truffe noire sur sa purée de panais</p>
+                <p class="title">Langouste rôtie </p>
+                <p class="item-description">Et ses légumes de saison</p>
               </div>
               <p class="price">35€</p>
               <div class="check">
@@ -130,8 +130,8 @@
             </input>
             <label for="sixth" class="menu-item">
               <div class="text-container">
-                <p class="title">Filet de turbot</p>
-                <p class="item-description">Aux agrumes</p>
+                <p class="title">Côte de bœuf Angus </p>
+                <p class="item-description">Et sa purée de panais</p>
               </div>
               <p class="price">44€</p>
               <div class="check">
@@ -149,8 +149,8 @@
             </input>
             <label for="seventh" class="menu-item">
               <div class="text-container">
-                <p class="title">Paris-Brest</p>
-                <p class="item-description">Revisité </p>
+                <p class="title">Farandole de desserts</p>
+                <p class="item-description">Du chef</p>
               </div>
               <p class="price">18€</p>
               <div class="check">
@@ -163,8 +163,8 @@
             </input>
             <label for="eigth" class="menu-item">
               <div class="text-container">
-                <p class="title">Macaron au chocolat d'exception </p>
-                <p class="item-description">Et glace à la vanille de Madagascar</p>
+                <p class="title">Crème brulée </p>
+                <p class="item-description">Revisitée</p>
               </div>
               <p class="price">22€</p>
               <div class="check">
@@ -177,8 +177,8 @@
             </input>
             <label for="ninth" class="menu-item">
               <div class="text-container">
-                <p class="title">Mousse au chocolat </p>
-                <p class="item-description">Au piment d'Espelette et à la truffe noire</p>
+                <p class="title">Tiramisu </p>
+                <p class="item-description">À la noisette</p>
               </div>
               <p class="price">23€</p>
               <div class="check">
